# trade-assistant

./: .gitignore  README.md  pyproject.toml
src/trade_assistant/: __init__.py  cli.py
src/trade_assistant/bbs/: __init__.py  candle_inputs.py  evaluate.py  models.py
src/trade_assistant/earnings/: __init__.py  yahoo.py
src/trade_assistant/journal/: __init__.py  commands.py  db.py  models.py  repository.py
src/trade_assistant/sizing/: __init__.py  core.py
tests/: test_bbs.py  test_candle_inputs.py  test_earnings.py  test_journal.py  test_sizing.py
