[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-assistant"
version = "0.1.0"
description = "Standalone assistant for paper trading: BBS evaluation and trade management (extensible)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.9",
    "rich>=13.7",
    "yfinance>=0.2.40",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]

[project.scripts]
trade-assistant = "trade_assistant.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
